added all the files

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ yet you still remain with me<br>
         
            <article class="container box style3">
 				<header>
-					<h2>Art</h2>
+					<h2>Art | Films | more</h2>
 					<p>Coming Soon</p>
                
 				</header>
